src/test/test-models/bad/err-nested-parens-close.stan
transformed data {
  real x;
  x <- (2 + 3;
}
